; ModuleID = '/home/carl/AnghaBench/libui/test/extr_page5.c_msgBoxError.c'
source_filename = "/home/carl/AnghaBench/libui/test/extr_page5.c_msgBoxError.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@title = common dso_local global i32 0, align 4
@description = common dso_local global i32 0, align 4
@parent = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @msgBoxError to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @msgBoxError(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i32, i32* @title, align 4
  %8 = call i8* @uiEntryText(i32 %7)
  store i8* %8, i8** %5, align 8
  %9 = load i32, i32* @description, align 4
  %10 = call i8* @uiEntryText(i32 %9)
  store i8* %10, i8** %6, align 8
  %11 = load i32, i32* @parent, align 4
  %12 = load i8*, i8** %5, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = call i32 @uiMsgBoxError(i32 %11, i8* %12, i8* %13)
  %15 = load i8*, i8** %6, align 8
  %16 = call i32 @uiFreeText(i8* %15)
  %17 = load i8*, i8** %5, align 8
  %18 = call i32 @uiFreeText(i8* %17)
  ret void
}

declare dso_local i8* @uiEntryText(i32) #1

declare dso_local i32 @uiMsgBoxError(i32, i8*, i8*) #1

declare dso_local i32 @uiFreeText(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
